--- a/views/index.pug
+++ b/views/index.pug
@@ -4,19 +4,29 @@ block css
   link(rel="stylesheet", href="/stylesheets/index.css")
 
 block scripts
+    script(src='https://cdn.jsdelivr.net/npm/big.js@6.0.0/big.min.js')
     script(src='/js/index.js')
 
 block content
 
-    form(class='form-signin' style='margin-top:30px')
-        label(for='etEmail', class='sr-only') Correo electrónico
-        input(type='email', id='etEmail', class='form-control', placeholder='E-mail')
+    div(class='paragraph')
 
-        label(for='etPaswword', class='sr-only') Contraseña
-        input(type='password', id='etPaswword', class='form-control', placeholder='Contraseña')
+      h5 Tarea 1: Inicio de sesión
 
-        button(class='btn btn-lg btn-primary btn-block') Iniciar Sesión
+    form(class='needs-validation form-signin', id='signup_form', style='margin-top:20px', novalidate, autocomplete="off")
 
-        hr
+      div(class='mb-3')
+        label(for='etUsername', class='sr-only') Nombre de Usuario
+        input(type='text', id='etUsername', class='form-control', placeholder='Nombre de Usuario', onkeydown="usernameKeylog(event)", onkeyup="usernameKeylog(event)", required)
+        div(class='invalid-feedback') Ingrese nombre de usuario.
 
-        a(class='btn btn-lg btn-primary btn-block', href='/signup') Registrarse
+      div(class='mb-3')
+        label(for='etPassword', class='sr-only') Contraseña
+        input(type='password', id='etPassword', class='form-control', placeholder='Contraseña', onkeydown="passwordKeylog(event)", onkeyup="passwordKeylog(event)", required) 
+        div(class='invalid-feedback') Ingrese constraseña.
+
+    button(class='btn btn-lg btn-primary btn-block', onclick='login()') Iniciar Sesión
+
+    hr
+
+    a(class='btn btn-lg btn-primary btn-block', href='/signup') Registrarse
