added cookie, add listener keylog js

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang='en')
 
     link(rel="stylesheet", href="./stylesheets/css.css")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
-
+    script(src='/js/utils.js')
     block css
     block scripts
   body(class='bg-light')
