--- a/views/index.pug
+++ b/views/index.pug
@@ -17,12 +17,12 @@ block content
 
       div(class='mb-3')
         label(for='etUsername', class='sr-only') Nombre de Usuario
-        input(type='text', id='etUsername', class='form-control', placeholder='Nombre de Usuario', onkeydown="usernameKeylog(event)", onkeyup="usernameKeylog(event)", required)
+        input(type='text', id='etUsername', class='form-control', placeholder='Nombre de Usuario', required)
         div(class='invalid-feedback') Ingrese nombre de usuario.
 
       div(class='mb-3')
         label(for='etPassword', class='sr-only') Contraseña
-        input(type='password', id='etPassword', class='form-control', placeholder='Contraseña', onkeydown="passwordKeylog(event)", onkeyup="passwordKeylog(event)", required) 
+        input(type='password', id='etPassword', class='form-control', placeholder='Contraseña', required) 
         div(class='invalid-feedback') Ingrese constraseña.
 
     button(class='btn btn-lg btn-primary btn-block', onclick='login()') Iniciar Sesión
