--- a/views/impostor.pug
+++ b/views/impostor.pug
@@ -4,7 +4,8 @@ block css
   link(rel="stylesheet", href="/stylesheets/impostor.css")
 
 block scripts
-    script(src='/js/impostor.js')
+  script(src='https://cdn.jsdelivr.net/npm/big.js@6.0.0/big.min.js')
+  script(src='/js/impostor.js')
 
 block content
 
@@ -37,23 +38,27 @@ block content
         div(class="progress")
           div(class="progress-bar", role="progressbar", id="progressbar", aria-valuenow="0", aria-valuemin="0", aria-valuemax="100")
 
-      form
+      hr(class="paragraph-justify")
+
+      form(class='needs-validation', novalidate, autocomplete="off")
         div(class="form-group")
 
-          input(type="text", 
-                class="form-control", 
-                id="etUsername",
-                placeholder="Nombre de usuario",
-                autocomplete="off"
-          )
+          div(class='mb-3')
+            label(for='etUsername', class='sr-only') Nombre de Usuario
+            input(type='text', id='etUsername', class='form-control', placeholder='Nombre de Usuario', required)
+            div(class='invalid-feedback') Ingrese el nombre de usuario.
 
-          input(type="text", 
-                class="form-control",
-                id="etPassword",
-                placeholder="Contraseña",
-                autocomplete="off"
-          )
 
+          div(class='mb-3')
+            label(for='etPassword', class='sr-only') Contraseña
+            input(type='password', id='etPassword', class='form-control', placeholder='Contraseña', required) 
+            div(class='invalid-feedback') Ingrese la constraseña.
+          
+
+      div(class="form-group" id="divValidate")
+        div(class="form-group", )
+          button(type="button", id="btnValidate", class="btn btn-lg btn-primary btn-block", onclick="validateCredentials()") Iniciar Sesión
+
+      div(class="form-group hidden" id="divSend")
         div(class="form-group")
-          div(class="form-group", id="btnSend")
-            button(type="button",  class="btn btn-success", onclick="send()") Guardar muestra
+          button(type="button", id="btnSend", class="btn btn-lg btn-success btn-block", onclick="send_data()") Guardar muestra
