--- a/views/impostor1.pug
+++ b/views/impostor1.pug
@@ -5,7 +5,7 @@ block css
 
 block scripts
   script(src='https://cdn.jsdelivr.net/npm/big.js@6.0.0/big.min.js')
-  script(src='/js/impostor.js')
+  script(src='/js/impostor1.js')
 
 block content
 
