msg for logout and contact detail

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -9,3 +9,9 @@ button, a, hr {
     margin: auto;
     margin-top: 20px;
 }
+
+.footer {
+    margin: auto;
+    margin-top: 40px;
+    max-width: 330px;
+}
