--- a/views/impostor2.pug
+++ b/views/impostor2.pug
@@ -11,7 +11,7 @@ block content
 
     div(class='paragraph')
 
-        p(class="paragraph-justify") #{subtitle} Asi como lo hiciste antes, ahora tendrás que hacerte pasar por otro usuario impostor e ingresar las credenciales del siguiente usuario. NO lo uses para iniciar sesión en la pantalla inicial.
+        p(class="paragraph-justify") #{subtitle} Asi como antes, ahora tendrás que hacerte pasar por otro usuario impostor e ingresar las credenciales del siguiente usuario. NO lo uses para iniciar sesión en la pantalla inicial.
 
     hr(class="paragraph-justify")
 
