--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,6 @@ block scripts
 block content
 
     div(class='paragraph')
-
       h5 Tarea 1: Inicio de sesión
 
     form(class='needs-validation form-signin', id='signup_form', style='margin-top:20px', novalidate, autocomplete="off")
@@ -30,3 +29,7 @@ block content
     hr
 
     a(class='btn btn-lg btn-primary btn-block', href='/signup') Registrarse
+
+
+    div(class='paragraph footer')
+      p Si tienes algunda duda, puedes contactarte al <a href="tel:+51959291344">959 291 344</a> / <a href="mailto:aron.lo.li@hotmail.com?subject=Consulta">aron.lo.li@hotmail.com</a>
