--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ block content
         input(type='password', id='etPassword', class='form-control', placeholder='Contraseña', required) 
         div(class='invalid-feedback') Ingrese constraseña.
 
-    button(class='btn btn-lg btn-primary btn-block', onclick='login()') Iniciar Sesión
+    button(class='btn btn-lg btn-primary btn-block',id = "btnLogin", onclick='login()') Iniciar Sesión
 
     hr
 
