--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,9 @@ block scripts
 block content
 
     div(class='paragraph')
-      h5 Tarea 1: Inicio de sesión
+        h5 Si quieres revisar la dinámica del experimento, dale click al siguiente enlace  <a href="./docs/diagram.pdf" target="_blank" >(click aqui)</a>
+        h5 Tarea 1: Inicio de sesión
+        p(class = "subtitle") En esta tarea, usarás el nombre de usuario y la contraseña de registro para iniciar sesión. Si no te acuerdas, puedes verificar el correo que te mandamos con las credenciales de tu cuenta.
 
     form(class='needs-validation form-signin', id='signup_form', style='margin-top:20px', novalidate, autocomplete="off")
 
