--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,11 @@
     text-align: center;
 }
 
+.subtitle {
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+}
 
 button, a, hr {
     width: 100%;
