--- a/views/index.pug
+++ b/views/index.pug
@@ -32,6 +32,7 @@ block content
 
     a(class='btn btn-lg btn-primary btn-block', href='/signup') Registrarse
 
+    a(class='btn btn-lg btn-block', href='/forgotpassword') recordar credenciales
 
     div(class='paragraph footer')
       p Si tienes algunda duda, puedes contactarte al <a href="tel:+51959291344">959 291 344</a> / <a href="mailto:aron.lo.li@hotmail.com?subject=Consulta">aron.lo.li@hotmail.com</a>
