--- a/views/index.pug
+++ b/views/index.pug
@@ -32,7 +32,7 @@ block content
 
     a(class='btn btn-lg btn-primary btn-block', href='/signup') Registrarse
 
-    a(class='btn btn-lg btn-block', href='/forgotpassword') recordar credenciales
+    a(class='btn btn-lg btn-outline-primary btn-block', href='/forgotpassword') ¿Olvidaste tu contraseña?
 
     div(class='paragraph footer')
-      p Si tienes algunda duda, puedes contactarte al <a href="tel:+51959291344">959 291 344</a> / <a href="mailto:aron.lo.li@hotmail.com?subject=Consulta">aron.lo.li@hotmail.com</a>
+      p Si tienes algunda duda, puedes contactarte al <a href="tel:+51959291344">959 291 344</a> / <a href="mailto:aron.lo@yahoo.com?subject=Consulta">aron.lo@yahoo.com</a>
