--- a/views/signup.pug
+++ b/views/signup.pug
@@ -109,7 +109,7 @@ block content
                 input(type="checkbox", class="form-check-input", id="cbConsent")
                 label(for="cbConsent",class="form-check-label") Doy consentimiento de haber leído los <a href="https://docs.google.com/document/d/1DcxA9IjDIwYiLi9qR2Y_fCaGsd7_Kx6Zsq2xlBKE6DM/edit?usp=sharing" target="_blank">Términos y Condiciones</a>
 
-            h4 Por favor, descargar el Documento de Consentimiento <a href="https://docs.google.com/document/d/1KRUzQ3awPRYSJgkOeOqamFKXvKiH1JSgu6VfpZ0doMM/edit?usp=sharing", target="_blank">(click aquí)</a> y enviarlo a: <a href="mailto:aron.lo.li@hotmail.com?subject=Envio de Documento de Consentimiento">aron.lo.li@hotmail.com</a>   
+            h4 Por favor, descargar el Documento de Consentimiento <a href="https://docs.google.com/document/d/1KRUzQ3awPRYSJgkOeOqamFKXvKiH1JSgu6VfpZ0doMM/edit?usp=sharing", target="_blank">(click aquí)</a> y enviarlo a: <a href="mailto:aron.lo@yahoo.com?subject=Envio de Documento de Consentimiento">aron.lo@yahoo.com</a>   
                 
             
             
