--- a/views/signup.pug
+++ b/views/signup.pug
@@ -107,9 +107,9 @@ block content
             
             div(class="form-group form-check spacing-top")
                 input(type="checkbox", class="form-check-input", id="cbConsent")
-                label(for="cbConsent",class="form-check-label") Doy consentimiento de haber leído los <a href="https://docs.google.com/document/d/1DcxA9IjDIwYiLi9qR2Y_fCaGsd7_Kx6Zsq2xlBKE6DM/edit?usp=sharing" target="_blank">Términos y Condiciones</a>
+                label(for="cbConsent",class="form-check-label") Doy consentimiento de haber leído los <a href="https://docs.google.com/document/d/1DcxA9IjDIwYiLi9qR2Y_fCaGsd7_Kx6Zsq2xlBKE6DM/edit?usp=sharing" target="_blank">Términos y Condiciones</a> y estoy de acuerdo con el uso consentido de mis datos personales proporcionados para completar y firmar el <a href="https://docs.google.com/document/d/1KRUzQ3awPRYSJgkOeOqamFKXvKiH1JSgu6VfpZ0doMM/edit?usp=sharing", target="_blank">Documento de Consentimiento</a>*.
 
-            h4 Por favor, descargar el Documento de Consentimiento <a href="https://docs.google.com/document/d/1KRUzQ3awPRYSJgkOeOqamFKXvKiH1JSgu6VfpZ0doMM/edit?usp=sharing", target="_blank">(click aquí)</a> y enviarlo a: <a href="mailto:aron.lo@yahoo.com?subject=Envio de Documento de Consentimiento">aron.lo@yahoo.com</a>   
+                small *Se enviará una copia del documento firmado al correo proporcionado.
                 
             
             
