--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title='Tesis Dinámica de Tecleo'
+    title='Experimento: Dinámica de Tecleo'
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet',
@@ -20,7 +20,7 @@ html(lang='en')
         div(class='py-5 text-center')
             a(href='/')
               img(class='d-block mx-auto mb-4', src='./images/bootstrap-solid.svg', alt='logo', width='72', height='72')
-            h2 Tesis: Recolección de Patrones de Tecleo
+            h2 Experimento: Recolección de Patrones de Tecleo
     
     
         block content
