--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,22 +1,20 @@
 .paragraph{
-    text-align: center;
-}
-
-.subtitle {
+    text-align: justify;
     width: 100%;
-    max-width: 500px;
+    max-width: 800px;
     margin: auto;
 }
 
-button, a, hr {
+
+button, a {
     width: 100%;
-    max-width: 330px;
+    max-width: 400px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.footer {
-    margin: auto;
-    margin-top: 40px;
+.hr-special{
+    width: 100%;
     max-width: 330px;
 }
