--- a/views/index.pug
+++ b/views/index.pug
@@ -13,22 +13,22 @@ block content
         p Para la dinámica tendrás que realizar los siguientes pasos:
             ul
                 li Si es la primera vez que accedes al sistema y aún no tienes una cuenta, tendrás que registrarte en el sistema. Al momento de registrarte, es importante que descargues el documento de consentimiento y la reenvies al correo del investigador.
-                li #[b Tarea 1: (1° vez)] Ingresa al sistema con tus #[b propias] creedenciales.
-                li #[b Tarea 2: (1° vez)] El sistema te mostrará las creedenciales de un usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
-                li #[b Tarea 3: (1° vez)] El sistema te mostrará las creedenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
+                li #[b Tarea 1: (1° vez)] Ingresa al sistema con tus #[b propias] credenciales.
+                li #[b Tarea 2: (1° vez)] El sistema te mostrará las credenciales de un usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
+                li #[b Tarea 3: (1° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
                 li #[b Cerrar sesión] y hacer el flujo nuevamente.
-                li #[b Tarea 1: (2° vez)] Ingresa nuevamente al sistema con tus #[b propias] creedenciales.
-                li #[b Tarea 2: (2° vez)] El sistema te mostrará las creedenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
-                li #[b Tarea 3: (2° vez)] El sistema te mostrará las creedenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
+                li #[b Tarea 1: (2° vez)] Ingresa nuevamente al sistema con tus #[b propias] credenciales.
+                li #[b Tarea 2: (2° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
+                li #[b Tarea 3: (2° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
                 li #[b Cerrar sesión] y hacer el flujo nuevamente.
-                li #[b Tarea 1: (3° vez)] Ingresa nuevamente al sistema con tus #[b propias] creedenciales.
-                li #[b Tarea 2: (3° vez)] El sistema te mostrará las creedenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
-                li #[b Tarea 3: (3° vez)] El sistema te mostrará las creedenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas creedenciales 3 veces.
+                li #[b Tarea 1: (3° vez)] Ingresa nuevamente al sistema con tus #[b propias] credenciales.
+                li #[b Tarea 2: (3° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
+                li #[b Tarea 3: (3° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
                 li Finalmente tendrás que #[b cerrar sesión], donde se te mandará un correo indicando que completaste todas las pruebas de ese día correctamente. Si intentas iniciar sesión nuevamente, no te dejará el sistema.
 
         p Si quieres revisar la dinámica del experimento en una diagrama, dale click al siguiente #[a(href="./docs/diagram.pdf" target="_blank") enlace].
         p Tambíen encontrarás un video con la explicación en el siguiente enlace de #[a(href="https://youtu.be/aPfgiJF9Qes" target="_blank") Youtube].
-        p Si tienes algunda duda, puedes contactarte al #[a(href="tel:+51959291344") 959 291 344] / #[a(href="mailto:aron.lo@yahoo.com?subject=Consulta") aron.lo@yahoo.com]
+        p Si tienes alguna duda, puedes contactarte al #[a(href="tel:+51959291344") 959 291 344] / #[a(href="mailto:aron.lo@yahoo.com?subject=Consulta") aron.lo@yahoo.com]
 
         hr
 
