--- a/views/index.pug
+++ b/views/index.pug
@@ -26,6 +26,10 @@ block content
                 li #[b Tarea 3: (3° vez)] El sistema te mostrará las credenciales de #[b otro] usuario seleccionado de forma aleatoria y tendrás que acceder al sistema con esas credenciales 3 veces.
                 li Finalmente tendrás que #[b cerrar sesión], donde se te mandará un correo indicando que completaste todas las pruebas de ese día correctamente. Si intentas iniciar sesión nuevamente, no te dejará el sistema.
 
+        mark 
+            small *En todas las tareas, si escribes mal la palabra y oprimes la tecla "delete" o "backspace" para corregir, la muestra actual será considerada inválida y toda la palabra que hayas escrito se borrará.
+        p
+
         p Si quieres revisar la dinámica del experimento en una diagrama, dale click al siguiente #[a(href="./docs/diagram.pdf" target="_blank") enlace].
         p Tambíen encontrarás un video con la explicación en el siguiente enlace de #[a(href="https://youtu.be/aPfgiJF9Qes" target="_blank") Youtube].
         p Si tienes alguna duda, puedes contactarte al #[a(href="tel:+51959291344") 959 291 344] / #[a(href="mailto:aron.lo@yahoo.com?subject=Consulta") aron.lo@yahoo.com]
